Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28009

QTableview, full lines selection from columns logical=0 instead of visual=0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 4.8.3, 5.0.0 Beta 2
    • Widgets: Itemviews
    • None
    • Windows 7 x64

      The best way to reproduce the bug is to run the Qt Examples and Demos -> Demonstrations -> Interview sample.

      • Launch the Interview sample,
      • from the left view (the tableview), select de column 0 then move it after the column ... 3 (it is important that you take the 0 one !!)
      • now, select the line 5 and move it after 6
      • At this step, you have moved the colum 0 and the line 5
      • select the line 2 (for exemple),
      • using the SHIFT key, select the line 10 in order to select all lines from 2 to 10

      RESULT:

      • lines 2 to 10 are selected BUT ... the first selected column is the logical =0 whereas it should be the visual = 0 one.
        You can see on the screenshot that the selection does not start at the left of the tableview.

        1. qt.jpg
          497 kB
          Laurent Ricatti
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            laurentricatti Laurent Ricatti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes