Fix selection in QTableView when rows and columns have been moved

The determination of top left and bottom right model indexes for the
selection used logical indexes, which resulted in selection truncating
itself if the first or last row or column had been moved to different
position on the table. Changed the logic to use visual indexes instead.

Task-number: QTBUG-28009
Change-Id: I4eb9dab690dafda9d2ab7c452dd6271fad70cb30
Reviewed-by: Thorbjørn Lund Martsum <tmartsum@gmail.com>
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: 0457f8bb8e0dbfe1850be645ae9a704ebb85eebd https://github.com/qt/qtbase/commit/0457f8bb8e0dbfe1850be645ae9a704ebb85eebd